# 3-u-duotis

./: CMakeLists.txt  Nuskaitymas.cpp  README.md  StudentoKlase.cpp  StudentoKlase.h  funkcijosGeneravimas.cpp  main.cpp
Dokumentacija/: Doxyfile
Dokumentacija/html/: _studento_klase_8h_source.html  annotated.html  classes.html  classstudentas-members.html  classstudentas.html  files.html  index.html
Dokumentacija/latex/: annotated.tex  classstudentas.tex  refman.tex
testCases/: 100.txt  test.cpp
